2003-04-01  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/pixmaps/off-grid.xpm: 
	* app/pixmaps/on-grid.xpm: 
	* app/Makefile.am (EXTRA_DIST): Added snap to grid icons.

	* app/display.h: 
	* app/commands.c (view_snap_to_grid_callback): 
	* app/display.c (ddisplay_set_snap_to_grid) 
	(update_snap_grid_status): 
	* app/interface.c (create_display_shell, grid_toggle_snap): 
	Added snap-to-grid status button.

2003-03-31  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/app_procs.c (app_init): Create a new diagram if a file on
	the command line isn't found.

2003-03-17  Lars Clausen  <lrclause@cs.uiuc.edu>

	* lib/dialibartrenderer.c (draw_string): Correct color handling
	for AA.

2003-03-14  Lars Clausen  <lrclause@cs.uiuc.edu>

	* NEWS: 
	* doc/en/dia-manual.sgml: 
	* doc/pl/dia-manual.sgml: 
	* configure.in: 
	* dia.spec (Release): 
	Version 0.91 is here!

2003-02-10  Steffen Macke <sdteffen@web.de>

	* plug-ins/wmf/wmf.cpp: patch from Ken Tsukahara 
	<ken.tsukahara@tmt-d.co.jp>, fixes windows printing and WMF export of
	non-ANSI characters, closes #107980

2003-03-04  Lars Clausen  <lrclause@cs.uiuc.edu>

	* configure.in: 
	* NEWS: 
	* dia.spec (Release): 
	* doc/en/dia-manual.sgml: Upping to pre6.

	* configure.in: Missing comma broke HAVE_IEEEFP_H test.

	* app/lineprops_area.c (dia_arrow_chooser_new): Fixing bug
	#107511:  Make arrow selector for correct arrow type.

2003-03-03  Lars Clausen  <lrclause@cs.uiuc.edu>

	* shapes/Circuit/Makefile.am (SHAPES): Added hjumper.png to
	EXTRA_DIST.

2003-03-02  Lars Clausen  <lrclause@cs.uiuc.edu>

	* doc/en/dia-manual.sgml: 
	* configure.in: 
	* NEWS: 
	* dia.spec (Release): Upping to pre5.

	* configure.in: Add freetype-config derived libs to the
	AC_CHECK_LIB statement for freetype.

2003-02-28  Hans Breuer  <hans@breuer.org>

	[fix for bug #107203]

	* lib/diarenderer.c : add warning 'implementation'
	for fill_rect to avoid crashing with a renderer
	which does not implement this required function.
